返回集合踢出逻辑删除